[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/scripts/App.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/normal_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/icons/settings_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/add_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/add_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/settings_hover.png" type="Texture" id=7]
[ext_resource path="res://src/scenes/AddObjectDialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/GenerationSettingsDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/icons/bag(1).svg" type="Texture" id=10]
[ext_resource path="res://src/styles/main_button_style.tres" type="StyleBox" id=11]
[ext_resource path="res://src/styles/main_buttion_hover.tres" type="StyleBox" id=12]
[ext_resource path="res://assets/icons/warning.png" type="Texture" id=13]
[ext_resource path="res://src/scripts/Indicator.gd" type="Script" id=14]
[ext_resource path="res://src/scenes/MaxBagWeightDialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/shaders/blur_shader.tres" type="Material" id=16]
[ext_resource path="res://assets/icons/bag_loading.png" type="Texture" id=17]
[ext_resource path="res://src/scripts/WaitScreen.gd" type="Script" id=18]
[ext_resource path="res://assets/fonts/normal_medium.tres" type="DynamicFont" id=19]
[ext_resource path="res://src/scripts/AlgoSelector.gd" type="Script" id=20]
[ext_resource path="res://assets/fonts/normal_small.tres" type="DynamicFont" id=21]
[ext_resource path="res://src/scripts/Toast.gd" type="Script" id=22]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 1.4, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 50, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.5
linear_accel_random = 0.5
radial_accel = -100.0
radial_accel_random = 0.4
angle = 360.0
angle_random = 1.0
scale = 20.0
scale_curve = SubResource( 2 )
color = Color( 0.819608, 0.670588, 0.478431, 1 )

[sub_resource type="Animation" id=4]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.454902, 0, 0, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="Animation" id=6]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Bag"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bag/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bag/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Sac ("

[node name="BagCurrentWeight" type="Label" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 101.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="Label2" type="Label" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 101.0
margin_right = 114.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "/"

[node name="MaxBagWeight" type="Label" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 171.0
margin_bottom = 40.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "100"

[node name="Label3" type="Label" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 171.0
margin_right = 182.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = ")"

[node name="MarginContainer" type="MarginContainer" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 226.0
margin_bottom = 40.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="Indicator" type="TextureRect" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 7.0
margin_right = 36.0
margin_bottom = 33.0
size_flags_vertical = 4
texture = ExtResource( 13 )
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/Indicator"]

[node name="Control" type="Control" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 226.0
margin_right = 350.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="EmptyBag" type="Button" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 350.0
margin_right = 480.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "Vider le sac"

[node name="MarginContainer3" type="MarginContainer" parent="Bag/VBoxContainer"]
margin_top = 64.0
margin_right = 512.0
margin_bottom = 104.0
custom_constants/margin_right = 16
custom_constants/margin_left = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Bag/VBoxContainer/MarginContainer3"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 40.0

[node name="Label4" type="Label" parent="Bag/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_top = 6.0
margin_right = 117.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Gain total : "

[node name="TotalGain" type="Label" parent="Bag/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 121.0
margin_right = 143.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.223529, 0.372549, 0.831373, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="Control" type="Control" parent="Bag/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 147.0
margin_right = 272.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="Bag/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 276.0
margin_top = 6.0
margin_right = 413.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "T.ex√©cution : "

[node name="ExecTime" type="Label" parent="Bag/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 417.0
margin_top = 6.0
margin_right = 431.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label6" type="Label" parent="Bag/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 435.0
margin_top = 6.0
margin_right = 480.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "(ms)"

[node name="TextureRect" type="TextureRect" parent="Bag/VBoxContainer"]
margin_top = 104.0
margin_right = 512.0
margin_bottom = 536.0
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bag/VBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Bag/VBoxContainer/TextureRect/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 416.0
color = Color( 0, 0, 0, 0.196078 )

[node name="ScrollContainer" type="ScrollContainer" parent="Bag/VBoxContainer/TextureRect/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagObjectList" type="VBoxContainer" parent="Bag/VBoxContainer/TextureRect/MarginContainer/ColorRect/ScrollContainer"]
margin_right = 480.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Bag/VBoxContainer"]
margin_top = 536.0
margin_right = 512.0
margin_bottom = 600.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Bag/VBoxContainer/MarginContainer2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 48.0

[node name="FillButton" type="Button" parent="Bag/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 299.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 11 )
text = "Remplir le sac"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Bag/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 303.0
margin_right = 447.0
margin_bottom = 40.0
hint_tooltip = "Utiliser un thread pour calculer en arri√®re plan (sans figer l'app)
!! NE MARCHE PAS SUR TOUS LES PLATEFORMES !!"
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
pressed = true
text = "Thread"

[node name="AlgoSelector" type="OptionButton" parent="Bag/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 451.0
margin_right = 480.0
margin_bottom = 40.0
hint_tooltip = "Choisir l'algorithme de remplissage"
custom_fonts/font = ExtResource( 21 )
script = ExtResource( 20 )

[node name="Objects" type="ColorRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
color = Color( 0.137255, 0.101961, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Objects"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Objects/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Objects/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Objets"
align = 1

[node name="ObjetsNumber" type="Label" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 158.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "(0)"

[node name="Control" type="Control" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 444.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="AddObjectButton" type="TextureButton" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 448.0
margin_top = 4.0
margin_right = 480.0
margin_bottom = 36.0
hint_tooltip = "Ajouter un objet"
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="MarginContainer3" type="MarginContainer" parent="Objects/VBoxContainer"]
margin_top = 64.0
margin_right = 512.0
margin_bottom = 542.0
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_left = 16

[node name="MarginContainer2" type="ColorRect" parent="Objects/VBoxContainer/MarginContainer3"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 478.0
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.117647 )

[node name="ScrollContainer" type="ScrollContainer" parent="Objects/VBoxContainer/MarginContainer3/MarginContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectList" type="VBoxContainer" parent="Objects/VBoxContainer/MarginContainer3/MarginContainer2/ScrollContainer"]
margin_right = 480.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Objects/VBoxContainer"]
margin_top = 542.0
margin_right = 512.0
margin_bottom = 600.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Objects/VBoxContainer/MarginContainer2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 42.0
custom_constants/separation = 10
alignment = 1

[node name="DeleteAllButton" type="Button" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 170.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "Tout supprimer"

[node name="Control" type="Control" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 180.0
margin_right = 256.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="GenerationSettingsButton" type="TextureButton" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 266.0
margin_top = 4.0
margin_right = 292.0
margin_bottom = 30.0
hint_tooltip = "Param√®tres de g√©n√©ration d'objets"
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )

[node name="GenerationNumber" type="SpinBox" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 302.0
margin_right = 376.0
margin_bottom = 34.0
hint_tooltip = "Nombre d'objets √† g√©n√©rer"
min_value = 1.0
max_value = 1e+07
value = 1.0
align = 1

[node name="GenerateButton" type="Button" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 386.0
margin_right = 480.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "G√©n√©rer"

[node name="AddObjectDialog" parent="." instance=ExtResource( 8 )]

[node name="GenerationSettings" parent="." instance=ExtResource( 9 )]

[node name="MaxBagWeightDialog" parent="." instance=ExtResource( 15 )]

[node name="WaitScreen" type="ColorRect" parent="."]
visible = false
material = ExtResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WaitScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WaitScreen/VBoxContainer"]
margin_top = 188.0
margin_right = 1024.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 1 )
text = "Remplissage du sac"
align = 1

[node name="TextureRect" type="TextureRect" parent="WaitScreen/VBoxContainer"]
margin_left = 436.0
margin_top = 260.0
margin_right = 587.0
margin_bottom = 411.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="WaitScreen/VBoxContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="WaitScreen/VBoxContainer/TextureRect/CenterContainer"]
amount = 1
visibility_rect = Rect2( -200, -200, 400, 400 )
process_material = SubResource( 3 )

[node name="Label2" type="Label" parent="WaitScreen/VBoxContainer"]
visible = false
margin_top = 371.0
margin_right = 1024.0
margin_bottom = 411.0
custom_fonts/font = ExtResource( 1 )
text = "Cas parcourus :"
align = 1

[node name="CaseNumber" type="Label" parent="WaitScreen/VBoxContainer"]
visible = false
margin_top = 443.0
margin_right = 1024.0
margin_bottom = 483.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="WaitTimer" type="HBoxContainer" parent="WaitScreen/VBoxContainer"]
margin_top = 407.0
margin_right = 1024.0
margin_bottom = 447.0
alignment = 1

[node name="TimerMinutes" type="Label" parent="WaitScreen/VBoxContainer/WaitTimer"]
margin_left = 451.0
margin_right = 495.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "00"
align = 1

[node name="TimerSeparation" type="Label" parent="WaitScreen/VBoxContainer/WaitTimer"]
margin_left = 499.0
margin_right = 525.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = " : "

[node name="TimerSeconds" type="Label" parent="WaitScreen/VBoxContainer/WaitTimer"]
margin_left = 529.0
margin_right = 573.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "00"
align = 1

[node name="Timer" type="Timer" parent="WaitScreen/VBoxContainer/WaitTimer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaitScreen"]
anims/Show = SubResource( 4 )

[node name="Toast" type="MarginContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_top = -100.0
margin_bottom = 14.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="Toast"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Toast/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Message"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Toast"]
anims/Show = SubResource( 6 )

[node name="Timer" type="Timer" parent="Toast"]

[connection signal="gui_input" from="Bag/VBoxContainer/MarginContainer/HBoxContainer/MaxBagWeight" to="." method="_on_MaxBagWeight_gui_input"]
[connection signal="timeout" from="Bag/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/Indicator/Timer" to="Bag/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/Indicator" method="_on_Timer_timeout"]
[connection signal="pressed" from="Bag/VBoxContainer/MarginContainer/HBoxContainer/EmptyBag" to="." method="_on_EmptyBag_pressed"]
[connection signal="pressed" from="Bag/VBoxContainer/MarginContainer2/HBoxContainer/FillButton" to="." method="_on_FillButton_pressed"]
[connection signal="toggled" from="Bag/VBoxContainer/MarginContainer2/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer/HBoxContainer/AddObjectButton" to="." method="_on_AddObjectButton_pressed"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer2/HBoxContainer/DeleteAllButton" to="." method="_on_DeleteAllButton_pressed"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer2/HBoxContainer/GenerationSettingsButton" to="." method="_on_GenerationSettingsButton_pressed"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer2/HBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="confirmed" from="AddObjectDialog" to="." method="_on_AddObjectDialog_confirmed"]
[connection signal="confirmed" from="MaxBagWeightDialog" to="." method="_on_MaxBagWeightDialog_confirmed"]
[connection signal="timeout" from="WaitScreen/VBoxContainer/WaitTimer/Timer" to="WaitScreen" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="WaitScreen/AnimationPlayer" to="." method="_on_Wait_Screen_animation_finished"]
[connection signal="animation_finished" from="Toast/AnimationPlayer" to="Toast" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Toast/Timer" to="Toast" method="_on_Timer_timeout"]
